force-app/main/default/objects/Portal_button_action__mdt/Portal_button_action__mdt.object-meta.xml
<CustomObject>
    <label>Portal button action</label>
    <pluralLabel>Portal button action</pluralLabel>
</CustomObject>