force-app/main/default/objects/Portal_button_action__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>If you have chosen Flow or Apex as action type, select an action here. This is used in portalButton.js to select and execute an action.</description>
    <inlineHelpText>If you have chosen Flow or Apex as action type, select an action here. This is used in portalButton.js to select and execute an action.</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recall approval</fullName>
                <default>true</default>
                <label>Recall approval</label>
            </value>
            <value>
                <fullName>Reject approval</fullName>
            </value>
            <value>
                <fullName>Approve approval</fullName>
            </value>
            <value>
                <fullName>Submit approval</fullName>
            </value>
            <value>
                <fullName>Plan intake</fullName>
            </value>
            <value>
                <fullName>New application</fullName>
            </value>
            <value>
                <fullName>Placement request</fullName>
            </value>
            <value>
                <fullName>Provide info</fullName>
            </value>
            <value>
                <fullName>Intake report</fullName>
            </value>
            <value>
                <fullName>Extend placement</fullName>
            </value>
            <value>
                <fullName>End placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>