force-app/main/default/objects/Portal_button_action__mdt/fields/Action_type__c.field-meta.xml
<CustomField>
    <fullName>Action_type__c</fullName>
    <label>Action type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
                <default>true</default>
                <label>Flow</label>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Navigate</fullName>
            </value>
            <value>
                <fullName>Approval action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>