force-app/main/default/objects/Portal_button_action__mdt/fields/Approval_flow_name__c.field-meta.xml
<CustomField>
    <fullName>Approval_flow_name__c</fullName>
    <description>If you want an approval to be process by a flow, fill out the name here (only for recall/approve/reject, not submit)</description>
    <inlineHelpText>If you want an approval to be process by a flow, fill out the name here (only for recall/approve/reject, not submit)</inlineHelpText>
    <label>Approval flow name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>