force-app/main/default/objects/Portal_button_action__mdt/fields/Flow_name__c.field-meta.xml
<CustomField>
    <fullName>Flow_name__c</fullName>
    <description>If action type is flow, insert the flow&apos;s API name here</description>
    <inlineHelpText>If action type is flow, insert the flow&apos;s API name here</inlineHelpText>
    <label>Flow name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>